# internal/delivery/http/purchase.go
@@ -3,7 +3,7 @@ package http
 import (
 	"net/http"
 	"encoding/json"
-
+	"github.com/google/uuid"
 	"github.com/go-park-mail-ru/2024_2_BogoSort/internal/entity/dto"
 	"github.com/go-park-mail-ru/2024_2_BogoSort/internal/usecase"
 	"github.com/go-park-mail-ru/2024_2_BogoSort/internal/delivery/http/utils"
@@ -22,6 +22,7 @@ func NewPurchaseEndpoints(purchaseUC usecase.Purchase, logger *zap.Logger) *Purc
 
 func (h *PurchaseEndpoints) ConfigureRoutes(router *mux.Router) {
 	router.HandleFunc("/api/v1/purchase", h.AddPurchase).Methods("POST")
+	router.HandleFunc("/api/v1/purchase/{user_id}", h.GetPurchasesByUserID).Methods("GET")
 }
 
 // AddPurchase processes the addition of a purchase
@@ -51,4 +52,41 @@ func (h *PurchaseEndpoints) AddPurchase(w http.ResponseWriter, r *http.Request) 
 	}
 
 	utils.SendJSONResponse(w, http.StatusCreated, purchaseResponse)
+}
+
+// GetPurchasesByUserID processes the retrieval of purchases by user ID
+// @Summary Retrieves purchases by user ID
+// @Description Accepts a user ID, validates it, and retrieves purchases from the system. Returns a response with purchase data or an error.
+// @Tags Purchases
+// @Accept json
+// @Produce json
+// @Param user_id path int true "User ID"
+// @Success 200 {array} dto.PurchaseResponse "Successful purchase"
+// @Failure 400 {object} utils.ErrResponse "Invalid user ID"
+// @Failure 500 {object} utils.ErrResponse "Internal server error"
+// @Router /api/v1/purchase/{user_id} [get]
+func (h *PurchaseEndpoints) GetPurchasesByUserID(w http.ResponseWriter, r *http.Request) {
+	userIDStr := mux.Vars(r)["user_id"]
+	userID, err := uuid.Parse(userIDStr)
+	if err != nil {
+		h.sendError(w, http.StatusBadRequest, err, "invalid user ID", nil)
+		return
+	}
+
+	purchases, err := h.purchaseUC.GetPurchasesByUserID(userID)
+	if err != nil {
+		h.handleError(w, err, "failed to get purchases")
+		return
+	}
+
+	utils.SendJSONResponse(w, http.StatusOK, purchases)
+}
+
+func (h *PurchaseEndpoints) sendError(w http.ResponseWriter, status int, err error, message string, data interface{}) {
+	utils.SendErrorResponse(w, status, message)
+}
+
+func (h *PurchaseEndpoints) handleError(w http.ResponseWriter, err error, message string) {
+	h.logger.Error(message, zap.Error(err))
+	utils.SendErrorResponse(w, http.StatusInternalServerError, "internal server error")
 }
